k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spi-service
spec:
  selector:
    app: spi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
